2006-08-03  Joseph Myers  <joseph@codesourcery.com>

	* gas/arm/iwmmxt-bad.s: Test invalid register names for wldrw and
	wstrw.
	* gas/arm/iwmmxt-bad.l: Update.

2006-08-03  Joseph Myers  <joseph@codesourcery.com>

	* gas/arm/iwmmxt.s: Test tmcr and tmrc with wcgr registers.
	* gas/arm/iwmmxt.d: Update.

2006-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/nops-2-i386.d: Updated.
	* gas/i386/nops-2-merom.d: Likewise.
	* gas/i386/nops-2.d: Likewise.

2006-07-29  Richard Sandiford  <richard@codesourcery.com>

	* gas/m68k/mcf-fpu.s: Add tests for all addressing modes.
	* gas/m68k/mcf-fpu.d: Update accordingly.

2006-07-20 Dwarakanath Rajagopal	<dwarak.rajagopal@amd.com>
	   Michael Meissner		<michael.meissner@amd.com>

	* gas/i386/amdfam10.s: Add .p2align 4,0 to make sure segment is
	aligned on all systems.
	* gas/i386/x86-64-amdfam10.s: Likewise.
	* gas/i386/amdfam10.d: Adjust output for alignment.
	* gas/i386/x86-64-amdfam10.d: Likewise.

2006-07-19  Paul Brook  <paul@codesourcery.com>

	* gas/arm/archv6t2.d: Adjust expected output for rbit.

2006-07-18  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/opcode.s: Add sldt, smsw and str.
	* gas/i386/x86-64-opcode.s: Likewise.

	* gas/i386/opcode.d: Updated.
	* gas/i386/x86-64-opcode.d: Likewise.

2006-07-18  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb2_add.d: New test.
	* gas/arm/thumb2_add.s: New test.

2006-07-18  Maciej W. Rozycki  <macro@mips.com>

	* gas/mips/mips4.s, gas/mips/mips4.d: Enable the "pref" test.  Change
	arguments for "madd.s" so that the instruction is correct for mips1
	and still matches "bc3*".

2006-07-13 Dwarakanath Rajagopal	<dwarak.rajagopal@amd.com>
	   Michael Meissner		<michael.meissner@amd.com>

	* gas/i386/amdfam10.s: New file for amdfam10 instructions.
	* gam/i386/amdfam10.d: Ditto.
	* gas/i386/x86-64-amdfam10.s: Ditto.
	* gam/i386/x86-64-amdfam10.d: Ditto.

2006-07-12  Nick Clifton  <nickc@redhat.com>

	* gas/sh/basic.exp: Run "too_large" dump test.